install/kubernetes/cube/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pipeline
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra

---
apiVersion: v1
kind: Namespace
metadata:
  name: jupyter
