install/kubernetes/cube/base/deploy-schedule.yaml
# encoding: utf-8
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-dashboard-schedule
  namespace: infra
  labels:
    app: kubeflow-dashboard-schedule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeflow-dashboard-schedule
  template:
    metadata:
      name: kubeflow-dashboard-schedule
      labels:
        app: kubeflow-dashboard-schedule
    spec:
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: kubeflow-dashboard-config
          configMap:
            name: kubeflow-dashboard-config
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
              - key: config.py
                path: config.py
      serviceAccount: kubeflow-dashboard
      containers:
        - name: kubeflow-dashboard-schedule
          image: ai.tencentmusic.com/tme-public/kubeflow-dashboard
          imagePullPolicy: Always
          command: ["bash","-c",'celery beat --loglevel=info --app=myapp.tasks.celery_app:celery_app']
          resources:       
            limits:
              cpu: 6
              memory: 6Gi
            requests:
              cpu: 10m
              memory: 100Mi
          volumeMounts:
            - name: kubeflow-dashboard-config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubeflow-dashboard-config
              mountPath: /home/myapp/myapp/config.py
              subPath: config.py
            - name: tz-config
              mountPath: /etc/localtime
---
# encoding: utf-8
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-watch
  namespace: infra
  labels:
    app: kubeflow-watch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeflow-watch
  template:
    metadata:
      name: kubeflow-watch
      labels:
        app: kubeflow-watch
    spec:
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: kubeflow-dashboard-config
          configMap:
            name: kubeflow-dashboard-config
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
              - key: config.py
                path: config.py
        - name: kubernetes-config
          configMap:
            name: kubernetes-config

      serviceAccount: kubeflow-dashboard
      containers:
        - name: kubeflow-watch-workflow
          image: ai.tencentmusic.com/tme-public/kubeflow-dashboard
          imagePullPolicy: Always  # IfNotPresent
          workingDir: /home/myapp/myapp/tools
          command: ["python","watch_workflow.py"]
          volumeMounts:
            - name: kubeflow-dashboard-config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubeflow-dashboard-config
              mountPath: /home/myapp/myapp/config.py
              subPath: config.py
            - name: tz-config
              mountPath: /etc/localtime
          resources:
            limits:
              cpu: 4
              memory: 4Gi
            requests:
              cpu: 10m
              memory: 100Mi
          livenessProbe:
            failureThreshold: 1
            exec:
              command: ["bash","-c","hour=`date +%H`; if [ $hour -eq 03 ]; then exit 1; fi"]
            initialDelaySeconds: 3600
            periodSeconds: 3600
            timeoutSeconds: 3600


---
# encoding: utf-8
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-dashboard-worker
  namespace: infra
  labels:
    app: kubeflow-dashboard-worker

spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeflow-dashboard-worker
  template:
    metadata:
      name: kubeflow-dashboard-worker
      labels:
        app: kubeflow-dashboard-worker
    spec:
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: kubeflow-dashboard-config
          configMap:
            name: kubeflow-dashboard-config
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
              - key: config.py
                path: config.py
      serviceAccount: kubeflow-dashboard
      containers:
        - name: kubeflow-dashboard-worker
          image: ai.tencentmusic.com/tme-public/kubeflow-dashboard
          imagePullPolicy: Always
          command: ["bash","-c",'celery worker --app=myapp.tasks.celery_app:celery_app --loglevel=info --pool=prefork -Ofair -c 20']
          resources:
            limits:
              cpu: 6
              memory: 6Gi
            requests:
              cpu: 10m
              memory: 100Mi
          volumeMounts:
            - name: kubeflow-dashboard-config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubeflow-dashboard-config
              mountPath: /home/myapp/myapp/config.py
              subPath: config.py
            - name: tz-config
              mountPath: /etc/localtime
