install/kubernetes/cube/base/ingress.yaml
# https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
# 所有的注释都在上面的网址上

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: infra-kubeflow-dashboard
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3000"
    nginx.ingress.kubernetes.io/proxy-body-size: 1g

    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "true"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*, X-CustomResponseHeader"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"

    # nginx的location部分
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: *";
      more_set_headers "Access-Control-Allow-Methods: *";
      more_set_headers "Access-Control-Allow-Headers: *";
      proxy_set_header Accept-Encoding "";
      sub_filter '<head>' '<head><script src="https://docker-76009.sz.gfp.tencent-cloud.com/kubeflow/myapp_into.js"></script>';

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: kubeflow-dashboard
              servicePort: 80
          - path: /workflows
            backend:
              serviceName: argo-server
              servicePort: 2746
#      host: "kubeflow.local.com"


---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argo-server
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: argo-server
              servicePort: 2746
            path: /argo(/|$)(.*)
#          - backend:
#              serviceName: argo-server
#              servicePort: 2746
#            path: /argo/(.*)
#      host: "kubeflow.local.com"


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: infra-k8s-dashboard
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m

    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "true"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*, X-CustomResponseHeader"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx server
#    nginx.ingress.kubernetes.io/server-snippet: |

    # nginx location
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: *";
      more_set_headers "Access-Control-Allow-Methods: *";
      more_set_headers "Access-Control-Allow-Headers: *";
      proxy_set_header Accept-Encoding "";
      sub_filter '<head>' '<head><script src="https://docker-76009.sz.gfp.tencent-cloud.com/kubeflow/myapp_into.js"></script>';

spec:
  rules:
    - http:
        paths:
          - path: /k8s/dashboard/cluster/(.*)
            backend:
              serviceName: kubernetes-dashboard-cluster
              servicePort: 9090
#      host: "kubeflow.local.com"
